<resources>
    <string name="app_name" translatable="false">UPlan</string>

    <string name="ui_menu_settings">Settings</string>
    <string name="ui_menu_calendar">Calendar</string>
    <string name="ui_menu_workboard">Work Board</string>
    <string name="ui_menu_tasks">Tasks</string>
    <string name="ui_menu_events">Events</string>

    <string name="time_separator" translatable="false"> - </string>
    <string name="ui_due_date">Due Today at </string>
    <string name="placeholder_text" translatable="false"> Hello World! </string>
    <string name="placeholder_time" translatable="false"> 10:00am </string>
    <string name="placeholder_date" translatable="false"> 10–05–2019 </string>

    <string name="event_name_hint">Enter name here..</string>
    <string name="event_description_hint">Enter description here..</string>
    <string name="event_Date_hint" translatable="false">YYYY-MM-DD</string>
    <string name="event_Time_hint" translatable="false">HH:MM:SS</string>
    <string name="event_title">Add/Edit an Event</string>
    <string name="event_label_start">Start Date:</string>
    <string name="event_label_end">End Date:</string>

    <string name="task_name_hint">Enter name here..</string>
    <string name="task_description_hint">Enter description here..</string>
    <string name="task_Date_hint" translatable="false">YYYY-MM-DD</string>
    <string name="task_Time_hint" translatable="false">HH:MM:SS</string>
    <string name="task_title">Add/Edit an Task</string>
    <string name="task_label_end">Due Date:</string>

    <string name="setting_global">General Settings</string>
    <string name="setting_global_desc">Here you can change your application</string>
    <string name="setting_delete_events_all">Delete All Events</string>
    <string name="setting_delete_event">Delete an Event:</string>
    <string name="setting_delete_tasks_all">Delete All Tasks</string>
    <string name="setting_delete_task">Delete a Task:</string>

    <string name="submit">Submit</string>
</resources>
