<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/darkAccent"
        app:contentPadding="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/darkLightAccent">

            <TextView
                android:id="@+id/event_name"
                android:textColor="@color/whiteAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:textStyle="bold"
                android:text="@string/placeholder_text"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/event_description"
                android:textColor="@color/whiteAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event_name"
                android:text="@string/placeholder_text"
                android:textSize="16sp"
                android:paddingBottom="6dp"
                android:paddingLeft="16dp"
                android:paddingRight="4dp"/>

            <TextView
                android:id="@+id/event_start_time"
                android:textColor="@color/whiteAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event_description"
                android:text="@string/placeholder_time"
                android:textSize="12sp"
                android:textStyle="italic"
                android:paddingLeft="16dp"
                android:paddingRight="4dp"/>

            <TextView
                android:id="@+id/separator"
                android:textColor="@color/whiteAccent"
                android:layout_toRightOf="@+id/event_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event_description"
                android:text="@string/time_separator"
                android:textSize="12sp"
                android:textStyle="italic"
                android:paddingLeft="2dp"
                android:paddingRight="4dp"/>

            <TextView
                android:id="@+id/event_end_time"
                android:textColor="@color/whiteAccent"
                android:layout_toRightOf="@+id/separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/event_description"
                android:text="@string/placeholder_time"
                android:textSize="12sp"
                android:textStyle="italic"
                android:paddingLeft="2dp"
                android:paddingRight="4dp"/>

            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/imageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingRight="10dp"
                tools:srcCompat="@drawable/edit"
                android:tint="@color/whiteAccent"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>