<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/toolbar" />
        <!-- For fragments -->
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/frame"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:weightSum="2">

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/events_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="35dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="35dp"
                                android:text="@string/ui_menu_events"
                                android:gravity="center"
                                android:textColor="@color/whiteAccent"
                                android:textSize="20sp"
                                android:background="@color/primary"/>

                            <ImageButton
                                android:id="@+id/add_event_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@color/primary"
                                android:layout_alignParentRight="true"
                                android:src="@android:drawable/ic_input_add"
                                android:tint="@color/lightPrimary"
                                android:contentDescription="@string/app_name"/>

                        </RelativeLayout>
                        <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/events_recyclerview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/tasks_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="35dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="35dp"
                                android:text="@string/ui_menu_tasks"
                                android:gravity="center"
                                android:textColor="@color/whiteAccent"
                                android:textSize="20sp"
                                android:background="@color/primary"/>

                            <ImageButton
                                android:id="@+id/add_task_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@color/primary"
                                android:layout_alignParentRight="true"
                                android:src="@android:drawable/ic_input_add"
                                android:tint="@color/lightPrimary"
                                android:contentDescription="@string/app_name"/>

                        </RelativeLayout>

                        <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/tasks_recyclerview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_menu">

    </com.google.android.material.navigation.NavigationView>



</androidx.drawerlayout.widget.DrawerLayout>